objects/RTS_Request__c.object
<CustomObject>
    <description>Track and sync RTS Requests to SFDC From Opps</description>
    <fields>
        <fullName>APL_Contact_Name__c</fullName>
        <description>Contact name for Appliance only [Note: 14Dec16 ADM also using so removed &quot;APL&quot; on label]</description>
        <label>Customer Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APL_Contact_Title__c</fullName>
        <description>Contact title for Appliance Only  [Note: 14Dec16: ADM also using, so field label changed]</description>
        <label>Customer Contact Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>OpportunityName__r.Account.Account_Combined_Data__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>CASE( TEXT(Product_Owning_GIBU__c), 
&quot;Appliances&quot;, &quot;Appliances&quot;,
&quot;Medical&quot;, &quot;Medical&quot;,
&quot;Aerospace, Defense and Marine&quot;,&quot;AD&amp;M&quot;,
&quot;CIS&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_Ship_Instr_Reg_of_Consumpt__c</fullName>
        <inlineHelpText>Please enter detailed description, shipping instructions and Reg of Consumption for this request.</inlineHelpText>
        <label>Comments, Ship Instr, &amp; Reg of Consumpt</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <formula>TRIM(LEFT(TEXT(DTC_Country_Code__c),2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Network_Id__c</fullName>
        <formula>CreatedBy.Te_Network_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator Network Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_NameContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Contact NameContact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>RTS Requests</relationshipLabel>
        <relationshipName>RTS_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Name__c</fullName>
        <formula>TRIM(IF(NOT (ISBLANK(DTC_Customer_Contact_Name__c)), DTC_Customer_Contact_Name__c, IF( NOT(ISBLANK(APL_Contact_Name__c)) , APL_Contact_Name__c , IF( 
NOT( 
ISNULL(Customer_Contact_NameContact__r.Id ) 
), Customer_Contact_NameContact__r.FirstName &amp; &apos; &apos; &amp; Customer_Contact_NameContact__r.LastName , null 
) )))</formula>
        <label>Customer Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Title__c</fullName>
        <description>Business title of Contact Related to the opportunity</description>
        <formula>TRIM(IF( NOT(ISBLANK(DTC_Customer_Contact_Title__c)), DTC_Customer_Contact_Title__c, IF( NOT(ISBLANK(APL_Contact_Title__c)), APL_Contact_Title__c , IF( 
NOT( 
ISNULL(Customer_Contact_NameContact__r.Id ) 
), Customer_Contact_NameContact__r.Title , null 
) )))</formula>
        <inlineHelpText>Business title of Contact Related to the opportunity</inlineHelpText>
        <label>Customer Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_PO_Number__c</fullName>
        <inlineHelpText>Please enter a customer PO number if applicable.</inlineHelpText>
        <label>Customer PO Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTC_Country_Code__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US-United States</fullName>
                </value>
                <value>
                    <fullName>AD-Andorra</fullName>
                </value>
                <value>
                    <fullName>AE-Unitd Arab Emer</fullName>
                </value>
                <value>
                    <fullName>AF-Afghanistan</fullName>
                </value>
                <value>
                    <fullName>AG-Antigua&amp;Barbuda</fullName>
                </value>
                <value>
                    <fullName>AI-Anguilla</fullName>
                </value>
                <value>
                    <fullName>AL-Albania</fullName>
                </value>
                <value>
                    <fullName>AM-Armenia</fullName>
                </value>
                <value>
                    <fullName>AN-Netherlands Ant</fullName>
                </value>
                <value>
                    <fullName>AO-Angola</fullName>
                </value>
                <value>
                    <fullName>AQ-Antarctica</fullName>
                </value>
                <value>
                    <fullName>AR-Argentina</fullName>
                </value>
                <value>
                    <fullName>AS-American Somoa</fullName>
                </value>
                <value>
                    <fullName>AT-Austria</fullName>
                </value>
                <value>
                    <fullName>AU-Australia</fullName>
                </value>
                <value>
                    <fullName>AW-Aruba</fullName>
                </value>
                <value>
                    <fullName>AZ-Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>BA-Bosnia/Herzegov</fullName>
                </value>
                <value>
                    <fullName>BB-Barbados</fullName>
                </value>
                <value>
                    <fullName>BD-Bangladesh</fullName>
                </value>
                <value>
                    <fullName>BE-Belgium</fullName>
                </value>
                <value>
                    <fullName>BF-Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>BG-Bulgaria</fullName>
                </value>
                <value>
                    <fullName>BH-Bahrain</fullName>
                </value>
                <value>
                    <fullName>BI-Burundi</fullName>
                </value>
                <value>
                    <fullName>BJ-Benin</fullName>
                </value>
                <value>
                    <fullName>BM-Bermuda</fullName>
                </value>
                <value>
                    <fullName>BN-Brunei Darussal</fullName>
                </value>
                <value>
                    <fullName>BO-Bolivia</fullName>
                </value>
                <value>
                    <fullName>BR-Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTC_Customer_Contact_Name__c</fullName>
        <description>Customer contact name field for DTC only Sample Requests</description>
        <label>Customer Contact Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTC_Customer_Contact_Title__c</fullName>
        <description>Customer Contact Title for RTS REquest for DTC only.</description>
        <label>Customer Contact Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTC_Customer_Location__c</fullName>
        <inlineHelpText>Please enter address of customer including City, State, and Postal Code (If applicable).</inlineHelpText>
        <label>Customer Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DTC_Customer_Ship_to_Name__c</fullName>
        <inlineHelpText>Please enter the ship-to name of the customer.</inlineHelpText>
        <label>Customer Ship to Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTC_Industry_Code__c</fullName>
        <label>Industry Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DC33-Optical Disk Drives</fullName>
                </value>
                <value>
                    <fullName>DC34-Tape Drives</fullName>
                </value>
                <value>
                    <fullName>DC35-Mass Storage Disk</fullName>
                </value>
                <value>
                    <fullName>DC36-Mass Storage Tape</fullName>
                </value>
                <value>
                    <fullName>DE11-Super Computers</fullName>
                </value>
                <value>
                    <fullName>DE21-Mainframes</fullName>
                </value>
                <value>
                    <fullName>DE22-Volume Servers</fullName>
                </value>
                <value>
                    <fullName>DE31-Servers &amp; Volume Servers Passive Components &amp; Subassembly</fullName>
                </value>
                <value>
                    <fullName>DE32-Servers &amp; Volume Servers Wiring Harnesses &amp; Subcontractors</fullName>
                </value>
                <value>
                    <fullName>GJ11-Transmission Equipment</fullName>
                </value>
                <value>
                    <fullName>GJ21-Satellites &amp; Microwave Equipment</fullName>
                </value>
                <value>
                    <fullName>GJ31-Studio Broadcasting &amp; Transmission Equipment</fullName>
                </value>
                <value>
                    <fullName>GJ32-CATV Equipment</fullName>
                </value>
                <value>
                    <fullName>GJ41-Modems</fullName>
                </value>
                <value>
                    <fullName>GK11-Switching Equipment</fullName>
                </value>
                <value>
                    <fullName>GL12-Personal Communication Systems Base Stations</fullName>
                </value>
                <value>
                    <fullName>GL21-Telecommunications Component  Equipment</fullName>
                </value>
                <value>
                    <fullName>GM11-Local Area Network Equipment Manufacturers</fullName>
                </value>
                <value>
                    <fullName>GM21-Communication Processors</fullName>
                </value>
                <value>
                    <fullName>GN11-Communication Equipment Passive Components &amp; Subassemblies</fullName>
                </value>
                <value>
                    <fullName>GN12-Communication Equipment Wiring Harnesses &amp; Subcontractors</fullName>
                </value>
                <value>
                    <fullName>GP11-Communication Diagnostic Testing Equipment</fullName>
                </value>
                <value>
                    <fullName>GZZZ-Do Not Use</fullName>
                </value>
                <value>
                    <fullName>NA11-Automatic Test Equipment</fullName>
                </value>
                <value>
                    <fullName>NA21-Instruments - Electrical Characteristics</fullName>
                </value>
                <value>
                    <fullName>NB11-Instruments - Physical Characteristics</fullName>
                </value>
                <value>
                    <fullName>NC11-Engineering &amp; Research Instruments</fullName>
                </value>
                <value>
                    <fullName>NF11-Instrumentation &amp; Measuring Equipment Passive Components &amp; Subassemblies</fullName>
                </value>
                <value>
                    <fullName>NF12-Instrumentation &amp; Measuring Equipment Wiring Harnessess &amp; Subcontractors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department_Charge__c</fullName>
        <label>Department Charge</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Value</fullName>
                    <default>true</default>
                    <label>No Value</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ENGINEERING_ONLY__c</fullName>
        <defaultValue>&quot;engineering only&quot;</defaultValue>
        <label>**ENGINEERING ONLY**</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESR_Scope__c</fullName>
        <inlineHelpText>Please enter an ESR scope type from the list.</inlineHelpText>
        <label>ESR Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Samples Only</fullName>
                </value>
                <value>
                    <fullName>Functional Samples</fullName>
                </value>
                <value>
                    <fullName>Non-functional Samples</fullName>
                </value>
                <value>
                    <fullName>Representative of Production with FA Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engineering_Comments__c</fullName>
        <description>Field used by engineering to enter comments regarding the RTS request.</description>
        <inlineHelpText>Please enter comments regarding this request here.</inlineHelpText>
        <label>Engineering Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Engineering_Status__c</fullName>
        <description>Status of engineering process to fulfill request.</description>
        <inlineHelpText>Please enter a status of this request.</inlineHelpText>
        <label>Engineering Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Delay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Delivery_Date__c</fullName>
        <description>Date entered by Engineering on when they expect to have delivery of the sample.</description>
        <inlineHelpText>ENGINEERING ONLY: Please enter the date expected for delivery of sample.</inlineHelpText>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Form_Type__c</fullName>
        <formula>IF(TEXT( OpportunityName__r.Request_Type__c) = &quot;New Development&quot;, &quot;New Development&quot;, 
IF(TEXT( OpportunityName__r.Request_Type__c) = &quot;Cable Assembly - New Dev&quot;, &quot;New Development&quot;,
IF(TEXT( OpportunityName__r.Request_Type__c) = &quot;Extension&quot;, &quot;Extension&quot;, 
IF(TEXT( OpportunityName__r.Request_Type__c) = &quot;Cable Assembly - Extension&quot;, &quot;Extension&quot;, 
IF(TEXT( OpportunityName__r.Request_Type__c) = &quot;Sales Only&quot;, null, null 
) 
) 
) 
)
)</formula>
        <label>Form Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPL_of_Proposal_Part__c</fullName>
        <description>Formula field that shows the GPL of the SF Part Number chosen by the user.</description>
        <formula>Part__r.GPL__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GPL of Proposal Part</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Code__c</fullName>
        <formula>IF(NOT ( ISPICKVAL(DTC_Industry_Code__c,&quot;&quot;)) ,(LEFT(TEXT(DTC_Industry_Code__c),4)) ,OpportunityName__r.Account.LEVEL_4_INDUSTRY_CDE__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Code_from_WS__c</fullName>
        <formula>OpportunityName__r.Account.LEVEL_1_INDUSTRY_CDE__c  &amp; &apos; - &apos;&amp; Text(OpportunityName__r.Account.LEVEL_1_INDUSTRY_NM__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry Code (from WS)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_display__c</fullName>
        <description>Mapping based on Customer.</description>
        <formula>IF(OR(OpportunityName__r.Account.RecordType.DeveloperName=&quot;CIS_Global_Account&quot;, OpportunityName__r.Account.RecordType.DeveloperName=&quot;CIS_Prospect&quot;), TEXT( OpportunityName__r.Account.Industry_Code_Description__c), 
CASE( OpportunityName__r.Account.LEVEL_1_INDUSTRY_CDE__c , 
&quot;0108&quot;, &quot;Rail&quot;, 
&quot;0194&quot;, &quot;IB&quot;, 
&quot;0209&quot;, &quot;IB&quot;, 
&quot;0228&quot;, &quot;DataComm&quot;, 
&quot;0283&quot;, &quot;Appliances&quot;, 
&quot;0349&quot;, &quot;EMS&quot;, 
&quot;0374&quot;, &quot;A&amp;C&quot;, 
&quot;0421&quot;, &quot;DataComm&quot;, 
&quot;1002&quot;, &quot;Solar&quot;, 
&quot;Other&quot; 
))</formula>
        <label>Industry display</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_RTS_Assignment__c</fullName>
        <label>Latest RTS Assignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Location_Plant__c</fullName>
        <inlineHelpText>Please enter a manufacturing or plan location where sample will be produced.</inlineHelpText>
        <label>Manufacturing Location/Plant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Customer__c</fullName>
        <formula>IF( OpportunityName__r.Account.RecordTypeId = &quot;012E0000000JMUk&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>RTS Requests</relationshipLabel>
        <relationshipName>RTS_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Link__c</fullName>
        <description>This field will contains the Opportunity link</description>
        <formula>&apos;https://c2s.my.salesforce.com/&apos;+OpportunityName__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_BU_Desc__c</fullName>
        <description>If the value selected for Product Owning GIBU is &apos;Other BU&apos; then this field needs to be entered.</description>
        <inlineHelpText>If the value selected for Product Owning GIBU is &apos;Other BU&apos; then this field needs to be entered.</inlineHelpText>
        <label>Other BU Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to parts entered on the Opportunity Parts related list located within the Opportunity.</description>
        <inlineHelpText>Please click on the lookup button next to this field to choose a part for the request. NOTE: You can only choose one part per request.</inlineHelpText>
        <label>SF Part Number</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity_Part__c.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.OpportunityName__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity_Part__c</referenceTo>
        <relationshipLabel>RTS Requests</relationshipLabel>
        <relationshipName>RTS_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pct_Sales_Asia_Pacific__c</fullName>
        <description>The percent of sales for Asia Pacific region, as determined by selection of Region of Consumption/Sales on Opportunity</description>
        <formula>OpportunityName__r.Asia_Pacific__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percent of sales for Asia Pacific region, as determined by selection of Region of Consumption/Sales on Opportunity</inlineHelpText>
        <label>Pct Sales Asia Pacific</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_Sales_Australia_New_Zealand__c</fullName>
        <description>The percent of sales for ANZ region, as determined by selection of Region of Consumption/Sales on Opportunity</description>
        <formula>OpportunityName__r.Australia_NewZealand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percent of sales for ANZ region, as determined by selection of Region of Consumption/Sales on Opportunity</inlineHelpText>
        <label>Pct Sales Australia/New Zealand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_Sales_China__c</fullName>
        <description>The percent of sales for China region, as determined by selection of Region of Consumption/Sales on Opportunity</description>
        <formula>OpportunityName__r.China__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percent of sales for China region, as determined by selection of Region of Consumption/Sales on Opportunity</inlineHelpText>
        <label>Pct Sales China</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_Sales_EMEA__c</fullName>
        <description>The percent of sales for EMEA region, as determined by selection of Region of Consumption/Sales on Opportunity</description>
        <formula>OpportunityName__r.EMEA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percent of sales for EMEA region, as determined by selection of Region of Consumption/Sales on Opportunity</inlineHelpText>
        <label>Pct Sales EMEA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_Sales_North_America__c</fullName>
        <description>The percent of sales for North America region, as determined by selection of Region of Consumption/Sales on Opportunity</description>
        <formula>OpportunityName__r.North_America__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percent of sales for North America region, as determined by selection of Region of Consumption/Sales on Opportunity</inlineHelpText>
        <label>Pct Sales North America</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pct_Sales_South_America__c</fullName>
        <description>The percent of sales for South America region, as determined by selection of Region of Consumption/Sales on Opportunity</description>
        <formula>OpportunityName__r.South_America__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percent of sales for South America region, as determined by selection of Region of Consumption/Sales on Opportunity</inlineHelpText>
        <label>Pct Sales South America</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pricing_Requirement__c</fullName>
        <label>Pricing Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Estimate</fullName>
                </value>
                <value>
                    <fullName>Firm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <inlineHelpText>Please select a DND product group(CBC3).</inlineHelpText>
        <label>Product Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active Optics</fullName>
                </value>
                <value>
                    <fullName>Antenna</fullName>
                </value>
                <value>
                    <fullName>Board to Board</fullName>
                </value>
                <value>
                    <fullName>Cable and Cable Assembly</fullName>
                </value>
                <value>
                    <fullName>Cable Applied</fullName>
                </value>
                <value>
                    <fullName>Coax</fullName>
                </value>
                <value>
                    <fullName>I/O</fullName>
                </value>
                <value>
                    <fullName>Passive Optics</fullName>
                </value>
                <value>
                    <fullName>Power</fullName>
                </value>
                <value>
                    <fullName>Shielding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Manager__c</fullName>
        <inlineHelpText>Please enter a Product Manager&apos;s name. You can only select one manager.</inlineHelpText>
        <label>Product Manager</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Group__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Gerry Wu</fullName>
                </value>
                <value>
                    <fullName>Ron Brennian</fullName>
                </value>
                <value>
                    <fullName>Robert Smithmyer</fullName>
                </value>
                <value>
                    <fullName>Eric Snyder</fullName>
                </value>
                <value>
                    <fullName>Barbara Grzegorzewska</fullName>
                </value>
                <value>
                    <fullName>Thomas Giunta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Owning_GIBU__c</fullName>
        <label>Product Owning GIBU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Solar</fullName>
                </value>
                <value>
                    <fullName>Consumer Devices</fullName>
                </value>
                <value>
                    <fullName>Data Communications</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Other BU</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Appliances</fullName>
                </value>
                <value>
                    <fullName>Data &amp; Devices</fullName>
                </value>
                <value>
                    <fullName>Aerospace, Defense and Marine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposal_Part_Description__c</fullName>
        <description>Formula that shows the New Part Description or Part Description of the SF Part chosen by the user.</description>
        <formula>Part__r.New_Part_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal Part Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QR_Form_Type_Select__c</fullName>
        <description>Field values will be dependent on Product Owning GIBU. Value selected will be transferred to QR Form Type field.
Only ADM GIBU will be mapped to fields</description>
        <inlineHelpText>Select EQR form type if ADM user</inlineHelpText>
        <label>ADM QR Form Type Select</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Owning_GIBU__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Product</fullName>
                </value>
                <value>
                    <fullName>ELPS Wire and Cable/Multicore</fullName>
                </value>
                <value>
                    <fullName>NSPR Moulded Parts</fullName>
                </value>
                <value>
                    <fullName>NSPR Wire and Cable/Multicore</fullName>
                </value>
                <value>
                    <fullName>Raychem - Harness Assemblies</fullName>
                </value>
                <value>
                    <fullName>Raychem - Wire &amp; Cable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QR_Form_Type__c</fullName>
        <formula>CASE( TEXT(Product_Owning_GIBU__c), 
&quot;Appliances&quot;, &quot;All Product&quot;,
&quot;Medical&quot;, &quot;Global Medical&quot;,
&quot;Aerospace, Defense and Marine&quot;, (TEXT( QR_Form_Type_Select__c  )  ),
&quot;Global CIS&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QR Form Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Currency__c</fullName>
        <formula>TEXT( CurrencyIsoCode )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTS_Display_Id__c</fullName>
        <label>RTS Display Id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTS_Link__c</fullName>
        <label>RTS Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RTS_Request_Id__c</fullName>
        <externalId>true</externalId>
        <label>RTS Request Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RTS_Request__c</fullName>
        <formula>HYPERLINK(&quot;/apex/OpenRTSPage?id=&quot; &amp;  Id , &quot;Open RTS Request&quot; ,&quot;_top&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RTS Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RTS_Status__c</fullName>
        <label>RTS Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Marking_as_Urgent__c</fullName>
        <description>User must enter some value on this field. Has direct relationship with Request priority. If the Request Priority is Urgent this field is required.</description>
        <label>Reason for Marking as Urgent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Description__c</fullName>
        <label>Request Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Priority__c</fullName>
        <description>Request Priority</description>
        <label>Request Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Quantity__c</fullName>
        <description>Formula field that shows the &quot;Request Quantity&quot; from the Opportunity Part chosen by the user.</description>
        <formula>CASE(Part__r.DTC_Request_Quantity__c,
&quot;1&quot;, 1,
&quot;2&quot;, 2,
&quot;3&quot;, 3,
&quot;4&quot;, 4,
&quot;5&quot;, 5,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering Quote Request</fullName>
                    <default>true</default>
                    <label>Engineering Quote Request</label>
                </value>
                <value>
                    <fullName>Engineering Sample Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>